--- a/index.html
+++ b/index.html
@@ -257,26 +257,26 @@
 	<section class=" container home-menu">
 		  <div class="row home-left-menu ">
 				<ul class=" home col-lg-2 col-md-6 col-sm-12">
-					<li><a href="#"><img class="social-media" src="home.png">
+					<li><a href="#"><img class="social-media" src="https://imgur.com/sHhej0F.png">
 				<span>dashboard</span></a></li>	
-				<li><a href="#"><img class="social-media" src="facture.png">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/y9ctnt8.png">
 				<span>facture&paiments</span></a></li>
-				<li><a><img class="social-media" src="icon.png">
+				<li><a><img class="social-media" src="https://imgur.com/ObHbOio.png">
 				<span>consommation</span></a>
 			</li>
-				<li><a href="#"><img class="social-media" src="usage.jpg">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/D6xoYia.jpg">
 				<span>usage</span></a></li>
 			</li>
-				<li><a href="#"><img class="social-media" src="guide.png">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/GoLyurV.png">
 				<span>guide</span></a>
 			</li>
-				<li><a href="#"><img class="social-media" src="sound.png">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/tNjvTfd.png">
 				<span>simlateur tarif</span></a>
 			</li>
-				<li><a href="#"><img class="social-media" src="meteo.png">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/G1LOQ2L.png">
 				<span>bilan meteo</span></a>
 			</li>
-				<li><a href="#"><img class="social-media" src="contact.png">
+				<li><a href="#"><img class="social-media" src="https://imgur.com/TI85n92.png">
 				<span>contact</span></a>
 			</li>
 				</ul>	
@@ -317,7 +317,7 @@
  <div class="row">
  <div class="col-lg-4 col-md-6 col-sm-12 smeg-intro">
       <div class="col-lg-10 col-md-6 col-sm-12 smeg-info-detail">
-	<img  class="smeg-logo"class="social-media" src="smeg.png" alt="smeg logo">
+	<img  class="smeg-logo"class="social-media" src="https://imgur.com/RwcN21s.png" alt="smeg logo">
 	
 	<p class="smeg-info">Société Monégasque de l'electricité et du gaz 10,Avenue de Fontvielle
 		98000 Monaco <br/>
@@ -327,7 +327,6 @@
  </div>
  <div class="col-lg-4 col-md-6 col-sm-12 smeg-intro">
     <ul class="smeg-menu">
-		<li><a href="#">dashboard</a></li>
 		<li><a href="#">factures</a></li>
 		<li><a href="#">consommation</a></li>
 		<li><a href="#">Smart Home</a></li>
@@ -343,10 +342,10 @@
 	<div class="suivez-nous">
 	<span class="social-mediaTitle">Suivez Nous</span><br/>
 	<ul class="social-media-icon">
-		<i><a href="#"><img  class="social-media" src="facebook.png"></a></i>
-		<i><a href="#"><img class="social-media" src="instagram.png"></a></i>
-		<i><a href="#"><img class="social-media" src="linkedin.png"></a></i>
-		<i><a href="#"><img class="social-media" src="twitter.png"></a></i>
+		<i><a href="#"><img  class="social-media" src="https://imgur.com/69s5KzS.png"></a></i>
+		<i><a href="#"><img class="social-media" src="https://imgur.com/J3iuXg7.png"></a></i>
+		<i><a href="#"><img class="social-media" src="https://imgur.com/i15qoWv.png"></a></i>
+		<i><a href="#"><img class="social-media" src="https://imgur.com/U9hNARV.png"></a></i>
 </ul>
 </div>
 	</div>
